CHANGE LOG / RELEASE NOTES: (Newest to Oldest)

A21.2.001.0035 :
* Misc Adjustments
* Offset Windows

A21.2.001.0034 :
* Turned off Pickup feature for potted plants that look like garden plants
* Removed All grass types from mushroom helper
* Added cbpBinTrashRollingRandomHelper for a random rolling bin
* Addeed cbpAllPileRandomHelper: like lootrandomhelper but wont leave missing textures
* Added cbpUmbrellaTableDownCorner and cbpUmbrellaTableUpCorner variants

A21.2.001.0033 :
* Offset handtruck [so it fits under pallets and crates etc]
* Fixed duplicate blocks [cbpHardAirShock & cbpHardAirShockLight] was in twice
* Added terrstone that disables zombies spawns
* Added 16 Gravestones with game events [tfp examples]
* Added cbpStoreElectronicsBookShelfSpeaker2Left_rotate
* Added cbpStoreElectronicsBookShelfSpeaker2Right_rotate
* cbpCompoundCrossbowProp2 & cbpIronCrossbowPropWall2 
* adjusted the cbppumpshotgunprop so it was in the middle not the bottom when - placed against a wall
* added tv, bed  and canvas can be put on 45 degree angle
* Added blocks used for collapsing wall

A21.2.001.0032 :
* Offsets of all potted plants (to stick the potted bit underground to make it
    look like it is growing out of the ground.
* CBP versions of all pallet types + Localization + BlockPlaceHolders

A21.2.001.0031 :
* Offset shower handle, corner trash. Localizations update.

A21.2.001.0030 :
* Trader blocks show the trader. Helper block for random trader.

A21.2.001.0029 :
* Trader Offsets, tinted vehicles.

A21.2.001.0028 :
* Random helper for potted plants, pink wheelchair, waterfire block.

A21.2.001.0027 :
* Alternative brown pallet boxes, more random rotations.

A21.2.001.0026 :
* New coffeemakers, soda machines, beer coolers from Stallion.

A21.2.001.0025 :
* Stallion fixed large generator and other little things.

A21.1.001.0024 :
* Stallion added plant variants.

A21.1.001.0023 :
* Let water flow through some more blocks.