@@ -1,5 +1,10 @@
 CHANGE LOG / RELEASE NOTES: (Newest to Oldest)
 
+A21.2.001.0036 :
+* More Plant Offsets
+* Body Bag Offsets
+* Tinted Fridge and Faucets
+
 A21.2.001.0035 :
 * Misc Adjustments
 * Offset Windows
